Refactoring. Iterating over elements by class.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <section>
     <h1>Timer #1</h1>
-    <div class="timer-container" id="timer_1">
-      <p class="timer-text" id="done">How much time is left:</p>
-      <div class="timer">
-        <div><strong id="days">00</strong><span>days</span></div>
-        <div><strong id="hours">00</strong><span>hours</span></div>
-        <div><strong id="minutes">00</strong><span>minutes</span></div>
-        <div><strong id="seconds">00</strong><span>seconds</span></div>
+    <div class="timer-container">
+      <p class="timer-text">How much time is left:</p>
+      <div class="timer-wrapper">
+        <div><strong class="timer-days">00</strong><span>days</span></div>
+        <div><strong class="timer-hours">00</strong><span>hours</span></div>
+        <div><strong class="timer-minutes">00</strong><span>minutes</span></div>
+        <div><strong class="timer-seconds">00</strong><span>seconds</span></div>
       </div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -25,13 +25,13 @@
 
   <section>
     <h2>Timer #2</h2>
-    <div class="timer-container" id="timer_2">
-      <p class="timer-text" id="done-timer2">How much time is left:</p>
-      <div class="timer">
-        <div><strong id="days-timer2">00</strong><span>days</span></div>
-        <div><strong id="hours-timer2">00</strong><span>hours</span></div>
-        <div><strong id="minutes-timer2">00</strong><span>minutes</span></div>
-        <div><strong id="seconds-timer2">00</strong><span>seconds</span></div>
+    <div class="timer-container">
+      <p class="timer-text">How much time is left:</p>
+      <div class="timer-wrapper">
+        <div><strong class="timer-days">00</strong><span>days</span></div>
+        <div><strong class="timer-hours">00</strong><span>hours</span></div>
+        <div><strong class="timer-minutes">00</strong><span>minutes</span></div>
+        <div><strong class="timer-seconds">00</strong><span>seconds</span></div>
       </div>
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
