Classes of units of time

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,23 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
+
 <body>
   <section>
     <h1>Timer #1</h1>
     <div class="timer-container">
       <p class="timer-text">How much time is left:</p>
       <div class="timer-wrapper">
-        <div><strong class="timer-days">00</strong><span>days</span></div>
-        <div><strong class="timer-hours">00</strong><span>hours</span></div>
-        <div><strong class="timer-minutes">00</strong><span>minutes</span></div>
-        <div><strong class="timer-seconds">00</strong><span>seconds</span></div>
+        <div><strong class="timer-days">00</strong><span class="unit-days">days</span></div>
+        <div><strong class="timer-hours">00</strong><span class="unit-hours">hours</span></div>
+        <div><strong class="timer-minutes">00</strong><span class="unit-minutes">minutes</span></div>
+        <div><strong class="timer-seconds">00</strong><span class="unit-seconds">seconds</span></div>
       </div>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </section>
 
   <section>
@@ -28,17 +33,20 @@
     <div class="timer-container">
       <p class="timer-text">How much time is left:</p>
       <div class="timer-wrapper">
-        <div><strong class="timer-days">00</strong><span>days</span></div>
-        <div><strong class="timer-hours">00</strong><span>hours</span></div>
-        <div><strong class="timer-minutes">00</strong><span>minutes</span></div>
-        <div><strong class="timer-seconds">00</strong><span>seconds</span></div>
+        <div><strong class="timer-days">00</strong><span class="unit-days">days</span></div>
+        <div><strong class="timer-hours">00</strong><span class="unit-hours">hours</span></div>
+        <div><strong class="timer-minutes">00</strong><span class="unit-minutes">minutes</span></div>
+        <div><strong class="timer-seconds">00</strong><span class="unit-seconds">seconds</span></div>
       </div>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.
       Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
       sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </section>
 
 </body>
+
 </html>
